--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.7.9",
+    "axios": "^1.8.4",
     "cra-template": "1.2.0",
+    "emoji-picker-react": "^4.12.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "web-vitals": "^4.2.4"
   },
