--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "axios": "^1.8.4",
     "cra-template": "1.2.0",
     "emoji-picker-react": "^4.12.2",
+    "framer-motion": "^12.6.3",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
